--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
   },
   "homepage": "https://github.com/cojdev/float-grid#readme",
   "devDependencies": {
+    "css-mqpacker": "^6.0.1",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-filter": "^5.0.1",
+    "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1"
